# cobble

./: Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
crates/cobble/: Cargo.toml
crates/cobble-client/: Cargo.toml
crates/cobble-client/src/: lib.rs
crates/cobble-config/: Cargo.toml
crates/cobble-config/src/: lib.rs
crates/cobble-contracts/: Cargo.toml
crates/cobble-contracts/src/: lib.rs
crates/cobble-db/: Cargo.toml
crates/cobble-db/src/: app_db.rs  lib.rs  queries.rs  schema.rs  time.rs  types.rs
crates/cobble/src/: config.rs  main.rs
crates/cobble/ui/: app.slint  charts.slint  types.slint  widgets.slint
crates/cobbled/: Cargo.toml
crates/cobbled/src/: call_monitor.rs  codec.rs  config.rs  config_watcher.rs  location.rs  main.rs  mpris_monitor.rs  notification.rs  notify_monitor.rs  service.rs  supervisor.rs  weather.rs
crates/cobbled/src/integrations/: intervals_icu.rs  mod.rs  worker.rs
crates/cobbled/src/service/: mod.rs  state.rs
crates/cobbled/tests/: dbus_contract.rs
crates/libpebble-ble/: Cargo.toml
crates/libpebble-ble/src/: lib.rs  pebble.rs  uuids.rs
crates/libpebble-ble/src/endpoints/: app_message.rs  blob_db.rs  datalog.rs  health.rs  mod.rs  music.rs  phone_control.rs  phone_version.rs  ping.rs  screenshot.rs  system.rs  watch_pref.rs
crates/libpebble-ble/src/pebble/: connection.rs  dispatch.rs  inner.rs  mod.rs
crates/libpebble-ble/src/transport/: agent.rs  gatt_server.rs  ppogatt.rs
crates/libpebble-ble/tests/fixtures/: health_canonical.tsv  watch_prefs_canonical.tsv
crates/pebble-led/: Cargo.toml
crates/pebble-led/src/: main.rs  notify_monitor.rs  service.rs  supervisor.rs
data/: cobble.desktop
debian/: changelog  rules
docs/: SETTINGS_MIGRATION_RECOVERY.md
src/libpebble_ble/: client_transport.py  gatt_server.py  pebble.py
