[package]
name = "cobble-db"
version = "0.5.0"
edition = "2024"
description = "Shared SQLite health database schema, queries, and write operations for cobbled and cobble."

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1"
tracing = "0.1"
libpebble-ble = { path = "../libpebble-ble" }
