[package]
name = "cobble"
version = "0.6.0"
edition = "2024"
description = "GUI for Pebble smartwatch health data and daemon configuration."

[[bin]]
name = "cobble"
path = "src/main.rs"

[dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "backend-winit-wayland",
    "renderer-software",
] }
cobble-client = { path = "../cobble-client" }
cobble-db = { path = "../cobble-db" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
slint-build = "1"
