[package]
name = "cobbled"
version = "0.6.0"
edition = "2024"
description = "Long-lived daemon owning the Pebble BLE connection."

[[bin]]
name = "cobbled"
path = "src/main.rs"

[dependencies]
libpebble-ble = { path = "../libpebble-ble" }
cobble-config = { path = "../cobble-config" }
cobble-db = { path = "../cobble-db" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
png = "0.17"
notify = "6"
serde_json = "1"
sha2 = "0.10"
hostname = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
fastrand = "2"
httpdate = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
